Colab を使用して作成されました

--- a/section_2/python_basic_2.ipynb
+++ b/section_2/python_basic_2.ipynb
@@ -336,8 +336,8 @@
         "a.append(2015)\n",
         "print(a)\n",
         "\n",
-        "b.append(2015)\n",
-        "print(b)\n",
+        "# b.append(2015)\n",
+        "# print(b)\n",
         "\n"
       ],
       "execution_count": 6,
